Adding Week7/Day4 of living-clojure training-plan.

--- a/practice/living-clojure/training-plan-heroku-app/resources/public/index.html
+++ b/practice/living-clojure/training-plan-heroku-app/resources/public/index.html
@@ -1,13 +1,15 @@
 <html>
     <head>
-        <title>Test</title>
+        <title>Training Plan Heroku App</title>
     </head>
     <body>
-        <div>
-            This is a test
-        </div>
-        <script type="text/javascript" src="src/setup.js" charset="utf-8">
+        <div id="status"></div>
+        <button id="button1">Goodbye</button>
 
+        <script type="text/javascript" src="src/setup.js" charset="utf-8">
         </script>
+
+        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript">training_plan_heroku_app.core.init()</script>
     </body>
 </html>
